client controller test cases